--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Bootstrap-Flask==2.4.1
 click==8.1.7
 colorama==0.4.6
 Flask==2.3.3
-Flask-CKEditor==1.0.0
+Flask-CKEditor
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
@@ -16,7 +16,7 @@ greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
-SQLAlchemy==2.0.36
+SQLAlchemy
 typing_extensions==4.12.2
 Werkzeug==3.1.1
 WTForms==3.2.1
