--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,31 @@
-Flask_Login==0.6.3
-Flask-Gravatar==0.5.0
-SQLAlchemy
-gunicorn==21.2.0
-psycopg2-binary
-blinker==1.8.2
+# --- Core Framework (Pinned for MongoEngine compatibility) ---
+Flask==2.2.5
+Werkzeug==2.2.3
+flask-mongoengine==0.9.5
+
+# --- Database & Forms ---
+Flask-WTF==1.2.2
+WTForms==3.2.1
+# removed psycopg2-binary (PostgreSQL driver not needed for MongoDB)
+
+# --- User Management ---
+Flask-Login==0.6.3
+
+# --- UI & Utilities ---
 Bootstrap-Flask==2.4.1
+Flask-CKEditor
+bleach
+python-dotenv
 click==8.1.7
 colorama==0.4.6
-Flask==2.3.3
-Flask-CKEditor
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
+
+# --- Production Server ---
+gunicorn==21.2.0
+
+# --- Dependencies (Usually installed automatically, but fine to keep) ---
+blinker==1.8.2
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
-SQLAlchemy
 typing_extensions==4.12.2
-Werkzeug==3.1.1
-WTForms==3.2.1
-bleach
-Flask-Migrate
-python-dotenv
